# rplidar_ros

./: CHANGELOG.rst  CMakeLists.txt  Dockerfile  LICENSE  README.md  package.xml  runtime.env  startup_docker_container.bash
configs/: bottom_lidar_filter_left.yaml  bottom_lidar_filter_right.yaml  custom_rosconsole.conf
debian/: udev
include/: rplidar_node.hpp  visibility.h
launch/: bottom_lidar.launch  combined_lidar.launch  rplidar.launch  rplidar.launch.py  rplidar_a1.launch  rplidar_a1_launch.py  rplidar_a2.launch.py  rplidar_a2m12.launch  rplidar_a2m12_launch.py  rplidar_a2m7_launch.py  rplidar_a2m8_launch.py  rplidar_a3.launch  rplidar_a3.launch.py  rplidar_a3_launch.py  rplidar_c1.launch  rplidar_c1_launch.py  rplidar_launch.py  rplidar_s1.launch  rplidar_s1.launch.py  rplidar_s1_launch.py  rplidar_s1_tcp.launch  rplidar_s1_tcp.launch.py  rplidar_s1_tcp_launch.py  rplidar_s2.launch  rplidar_s2_launch.py  rplidar_s2e.launch  rplidar_s2e_launch.py  rplidar_s3.launch  rplidar_s3_launch.py  rplidar_t1.launch  rplidar_t1_launch.py  side_lidar.launch  test_rplidar.launch  test_rplidar.launch.py  test_rplidar_a3.launch  test_rplidar_a3.launch.py  view_rplidar.launch  view_rplidar.launch.py  view_rplidar_a1.launch  view_rplidar_a1_launch.py  (+25 more)
msg/: AxLaserScan.msg
rviz/: rplidar.rviz  rplidar_ros.rviz  rplidar_ros2.rviz
scripts/: create_udev_rules.sh  delete_udev_rules.sh
sdk/: Makefile  README.txt
sdk/include/: rplidar.h  rplidar_cmd.h  rplidar_driver.h  rplidar_protocol.h  sl_crc.h  sl_lidar.h  sl_lidar_cmd.h  sl_lidar_driver.h  sl_lidar_driver_impl.h  sl_lidar_protocol.h  sl_types.h  watchdog.h
sdk/src/: rplidar_driver.cpp  rplidar_driver_TCP.h  rplidar_driver_impl.h  rplidar_driver_serial.h  sdkcommon.h  sl_async_transceiver.cpp  sl_async_transceiver.h  sl_crc.cpp  sl_lidar_driver.cpp  sl_lidarprotocol_codec.cpp  sl_lidarprotocol_codec.h  sl_serial_channel.cpp  sl_tcp_channel.cpp  sl_udp_channel.cpp
sdk/src/arch/linux/: arch_linux.h  net_serial.cpp  net_serial.h  net_socket.cpp  thread.hpp  timer.cpp  timer.h
sdk/src/arch/macOS/: net_serial.cpp  net_serial.h  net_socket.cpp  thread.hpp  timer.cpp  timer.h
sdk/src/arch/win32/: arch_win32.h  net_serial.cpp  net_serial.h  net_socket.cpp  timer.cpp  timer.h  winthread.hpp
sdk/src/dataunpacker/: dataunnpacker_commondef.h  dataunnpacker_internal.h  dataunpacker.cpp  dataunpacker.h  dataupacker_namespace.h
sdk/src/dataunpacker/unpacker/: handler_capsules.cpp  handler_capsules.h  handler_hqnode.cpp  handler_hqnode.h  handler_normalnode.cpp  handler_normalnode.h
sdk/src/hal/: abs_rxtx.h  assert.h  byteorder.h  event.h  locker.h  socket.h  thread.cpp  thread.h  types.h  util.h  waiter.h
src/: client.cpp  node.cpp  rplidar_client.cpp  rplidar_node.cpp  rplidar_scan_publisher.cpp  standalone_prlidar.cpp  watchdog.cpp
srv/: MotorSpeed.srv  motor_speed.srv
urdf/: rplidar.urdf.xacro  rplidar_A2.urdf.xacro
urdf/stl/: rplidar_a2_simple.stl
